set(INSTALL_HEADERS_DIR include/opensmt)
install(FILES ${CMAKE_CURRENT_LIST_DIR}/opensmt2.h DESTINATION ${INSTALL_HEADERS_DIR})

add_subdirectory(proof)
add_subdirectory(common)
add_subdirectory(cnfizers)
add_subdirectory(pterms)
add_subdirectory(symbols)
add_subdirectory(sorts)
add_subdirectory(options)
add_subdirectory(api)
add_subdirectory(minisat)
add_subdirectory(models)
add_subdirectory(logics)
add_subdirectory(tsolvers)
add_subdirectory(simplifiers)
add_subdirectory(smtsolvers)
add_subdirectory(parsers)
add_subdirectory(itehandler)
add_subdirectory(rewriters)
add_subdirectory(interpolation)
add_subdirectory(unsatcores)
if (BUILD_EXECUTABLES)
  add_subdirectory(bin)
endif()

if (PARALLEL)
  add_subdirectory(parallel)
endif()
