noinst_LTLIBRARIES = libegraph.la

INCLUDES=$(config_includedirs) 

libegraph_la_SOURCES = EgraphSolver.C \
		       EgraphStore.C \
		       EgraphExplain.C \
		       EgraphDTC.C \
		       EgraphDebug.C \
		       Egraph.h \
		       Enode.C Enode.h \
		       SigTab.C SigTab.h \
		       UFInterpolator.C UFInterpolator.h
