add_library(logics OBJECT "")

target_sources(logics
    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LogicFactory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/BVLogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/BVLogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/CUFLogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/CUFLogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/CUFTheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LRALogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LRALogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LRATheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LIALogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LIALogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LIATheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Logic.cc"
	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Logic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LALogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LALogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Theory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Theory.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/UFLRATheory.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/UFLRATheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/UFTheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Tterm.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Tterm.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/SubstLoopBreaker.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/SubstLoopBreaker.cc"
)

install(FILES LogicFactory.h Theory.h Logic.h LALogic.h Tterm.h LRALogic.h LIALogic.h CUFLogic.h BVLogic.h
 DESTINATION ${INSTALL_HEADERS_DIR})


