add_library(logics OBJECT "")

target_sources(logics
    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/LogicFactory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/BVLogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/BVLogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/CUFLogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/CUFLogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/CUFTheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Logic.cc"
	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Logic.h"
	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/LATheory.h"
	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/ArithLogic.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ArithLogic.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Theory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Theory.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/UFLATheory.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/UFLATheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/UFTheory.cc"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/SubstLoopBreaker.h"
	PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/SubstLoopBreaker.cc"
)

install(FILES LogicFactory.h Theory.h Logic.h ArithLogic.h CUFLogic.h BVLogic.h
 DESTINATION ${INSTALL_HEADERS_DIR})


