noinst_LTLIBRARIES = liblogics.la
#noinst_PROGRAMS = testsimplify

AM_CPPFLAGS=$(config_includedirs)

liblogics_la_SOURCES = Logic.h Logic.C

#testsimplify_SOURCES = TestSimplify.C

#testsimplify_LDADD = ../logics/liblogics.la ../pterms/libpterms.la ../symbols/libsymbols.la ../sorts/libsorts.la ../smtsolvers/libsmtsolvers.la
